@@ -347,10 +347,10 @@ CIAO::Container_Impl::remove_components (ACE_ENV_SINGLE_ARG_DECL)
       ACE_THROW (CORBA::BAD_PARAM ());
 
     // This will call ccm_passivate on the component executor.
-    home->remove_component ((*iter).int_id_);
+    home->remove_component (((*iter).int_id_).in ());
     ACE_CHECK;
 
-    CORBA::release ((*iter).int_id_);
+    CORBA::release (((*iter).int_id_).in ());
   }
 
   this->component_map_.unbind_all ();
@@ -367,7 +367,7 @@ CIAO::Container_Impl::remove_component (const char * comp_ins_name
   ACE_THROW_SPEC ((CORBA::SystemException,
                    Components::RemoveFailure))
 {
-  Components::CCMObject_ptr comp;
+  Components::CCMObject_var comp;
   Components::CCMHome_ptr home;
 
   ACE_CString str (comp_ins_name);
@@ -386,11 +386,11 @@ CIAO::Container_Impl::remove_component (const char * comp_ins_name
     ACE_THROW (CORBA::BAD_PARAM ());
 
   // This will call ccm_passivate on the component executor.
-  home->remove_component (comp);
+  home->remove_component (comp.in ());
   ACE_CHECK;
 
   // If the previous calls failed, what should we do here??
-  CORBA::release (comp);
+  CORBA::release (comp.in ());
 
   // @@ Still need to remove the home if the previous operation fails?
   if (this->component_map_.unbind (str) == -1)
